--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="board">
+        
+    </div>
 
     <script src="./index.js"></script>
 </body>
