--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 </head>
 <body>
     <div class="board">
-        
+        <div class="card">
+            <div class="color"></div>
+            <h2 class="color-code">
+                #0a122a
+            </h2> <!-- it will be in js -->
+        </div>
+        <div class="card">
+            <div class="color"></div>
+            <h2 class="color-code">
+                #698f3f
+            </h2> <!-- it will be in js -->
+        </div>
+        <div class="card">
+            <div class="color"></div>
+            <h2 class="color-code">
+                #fbfaf8
+            </h2> <!-- it will be in js -->
+        </div>
     </div>
 
     <script src="./index.js"></script>
