Action is going

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <div class="card">
             <div class="color"></div>
             <h2 class="color-code">
-                #0a122a
+                <!-- #0a122a -->
             </h2> <!-- it will be in js -->
         </div>
         <div class="card">
             <div class="color"></div>
             <h2 class="color-code">
-                #698f3f
+                <!-- #698f3f -->
             </h2> <!-- it will be in js -->
         </div>
         <div class="card">
             <div class="color"></div>
             <h2 class="color-code">
-                #fbfaf8
+                <!-- #fbfaf8 -->
             </h2> <!-- it will be in js -->
         </div>
     </div>
