--- a/index.html
+++ b/index.html
@@ -7,25 +7,19 @@
     <title>Task 1</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="body">
     <div class="board">
         <div class="card">
             <div class="color"></div>
-            <h2 class="color-code">
-                <!-- #0a122a -->
-            </h2> <!-- it will be in js -->
+            <h2 class="color-code"></h2> <!-- it is value in js file -->
         </div>
         <div class="card">
             <div class="color"></div>
-            <h2 class="color-code">
-                <!-- #698f3f -->
-            </h2> <!-- it will be in js -->
+            <h2 class="color-code"></h2> <!-- it is value in js file -->
         </div>
         <div class="card">
             <div class="color"></div>
-            <h2 class="color-code">
-                <!-- #fbfaf8 -->
-            </h2> <!-- it will be in js -->
+            <h2 class="color-code"></h2> <!-- it is value in js file -->
         </div>
     </div>
 
